<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="20dip">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/format_emergency_name"
            android:text="@string/format_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/name_field"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"/>
    <TextView
        android:text="@string/number"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="left"/>
    <EditText
        android:id="@+id/number_field"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/enter_number"/>

    <TextView
        android:id="@+id/format_emergency_number"
        android:text="@string/format_phone_number"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <Button
        android:id="@+id/updateEM_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:onClick="onClick"
        android:text="@string/updateEM"
        />
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:onClick="onClick"
        android:text="@string/cancel"/>

</LinearLayout>

</ScrollView>