<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/device_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="82dp"
            android:layout_marginTop="0dp"/>
        <TextView
            android:text="@string/guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="0dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/name" />        <CheckBox
           android:id="@+id/name_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_weight=".52"
            android:checked="false" />
        <EditText
            android:id="@+id/guest_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            android:textSize="15sp"
            android:hint="@string/guest_name"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/blood_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/blood_type" />
        <CheckBox
            android:id="@+id/blood_type_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight=".52"
            android:checked="false" />

        <Spinner
            android:id="@+id/blood_type_spinner"
            android:layout_width="130dp"
            android:layout_height="50sp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/blood_array"
            android:prompt="@string/select_blood" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/number" />
        <CheckBox
            android:id="@+id/phone_number_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight=".52"
            android:checked="false" />
        <EditText
            android:id="@+id/guest_phone_number_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:inputType="phone"
            android:hint="@string/guest_phone_number"
            android:textSize="10sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/location" />
        <EditText
            android:id="@+id/location_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/enter_location"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>
    <Button
        android:id="@+id/previewSMS_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:onClick="onClick"
        android:text="@string/preview"
        />
    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:onClick="onClick"
        android:text="@string/home"/>
</LinearLayout>

</ScrollView>
