<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" >

<Button
    android:id="@+id/updateEM_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="30dp"
    android:layout_weight="0.9"
    android:onClick="onClick"
    android:text="@string/updateEM" />

<Button
    android:id="@+id/updateUser_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="10dp"
    android:layout_weight="0.9"
    android:onClick="onClick"
    android:text="@string/update_user" />

<Button
    android:id="@+id/home_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="10dp"
    android:layout_weight="0.82"
    android:onClick="onClick"
    android:text="@string/home" />

</LinearLayout>